[package]
name = "core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_repr = "^0.1"
strum = "^0.18"
strum_macros = "^0.18"
log = "^0.4"
serde_json = "^1.0"
cfg-if = "^0.1"
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde-wasm-bindgen = "^0.1"
once_cell = "^1.4"
uuid = { version = "^0.8", features = ["serde", "wasm-bindgen"] }
serde_qs = "^0.6"

web-sys = { version = "^0.3", features = [
    'Url',
    'Request',
    'RequestInit',
    'RequestCredentials',
    'Response',
    'RequestMode',
    'Headers',
    'Window',
    'Location',
    'Storage'
] }
shared = {path = "../../../shared/rust"}
config = {path = "../../../config/rust"}
awsm_web = {version = "^0.5", features = ["loaders", "serde_iso"]}
anyhow = { version = "1.0"}

[features]
local = []
release = []
sandbox = []
