[package]
name = "app"
version = "0.1.0"
description = "App"
authors = ["David Komer <david.komer@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Common deps
core = {path = "../../_core/rust"}
shared = {path = "../../../shared/rust"}
config = {path = "../../../config/rust"}
wasm-logger = { version = "0.2.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = { version = "0.2.67", features = ["nightly"] }
js-sys = "0.3.44"
web-sys = { version = "0.3.44", features = [
    'Url',
    'Request',
    'RequestInit',
    'Response',
    'RequestMode',
    'Headers',
    'Document', 
    'DocumentFragment',
    'HtmlTemplateElement',
    'Window',
    'Storage',
    'Location',
    'Element',
    'CssStyleDeclaration',
    'DomTokenList',
    'HtmlCollection',
    'HtmlInputElement',
    'KeyboardEvent',
    'MouseEvent',
] }
wasm-bindgen-futures = "0.4.17"
simple-html-template = { version = "0.2.2", features = ["wasm"] }
htmlescape = "0.3.1"
dominator = "0.5.11"
futures-signals = "0.3.15"
dominator_helpers = "0.2.4"
serde = { version = "1.0.114", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.57"
futures = "0.3.5"
log = "0.4.11"
cfg-if = "0.1.10"
awsm_web = { version = "0.4.1", features = ["dom"] }
discard = "1.0.4"

[features]
default = ["wee_alloc"]
release = ["core/release"]
sandbox = ["core/sandbox"]
ts_test = []
quiet = []
local = ["wasm-logger", "console_error_panic_hook", "core/local"]
