[package]
name = "app"
version = "0.1.0"
description = "App"
authors = ["David Komer <david.komer@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Common deps
core = {path = "../../core/rust"}
shared = {path = "../../../shared/rust"}
config = {path = "../../../config/rust"}
wasm-logger = { version = "0.2.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = { version = "0.2.68", features = ["nightly"] }
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = [
    'Url',
    'Request',
    'RequestInit',
    'Response',
    'RequestMode',
    'Headers',
    'Document', 
    'DocumentFragment',
    'HtmlTemplateElement',
    'Window',
    'Storage',
    'Location',
    'Element',
    'CssStyleDeclaration',
    'DomTokenList',
    'HtmlCollection',
    'HtmlInputElement',
    'HtmlSelectElement',
    'KeyboardEvent',
    'MouseEvent',
    'FileList',
    'File',
] }
wasm-bindgen-futures = "0.4.18"
simple-html-template = { version = "0.2.3", features = ["wasm"] }
htmlescape = "0.3.1"
dominator = "0.5.12"
futures-signals = "0.3.15"
dominator_helpers = "0.3.5"
serde = { version = "1.0.116", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.58"
futures = "0.3.6"
log = "0.4.11"
cfg-if = "1.0.0"
awsm_web = { version = "0.6.2", features = ["dom"] }
discard = "1.0.4"
uuid = { version = "0.8.1", features = ["serde", "wasm-bindgen"] }
serde_qs = "0.7.0"
url = "2.1.1"
gloo = "0.2.1"


[features]
default = ["wee_alloc"]
release = ["core/release"]
sandbox = ["core/sandbox"]
ts_test = []
quiet = []
local = ["wasm-logger", "console_error_panic_hook", "core/local"]
