[package]
name = "templates-builder"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.4.0"
structopt = "^0.3"
simplelog = "^0.8"
cfg-if = "^0.1"
dotenv = "^0.15"
log = "^0.4"
config = { path = "../../../config/rust" }
