[package]
name = "core"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_repr = "0.1.6"
strum = "0.19.5"
strum_macros = "0.19.4"
log = "0.4.11"
serde_json = "1.0.58"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"
wasm-bindgen-futures = "0.4.18"
serde-wasm-bindgen = "0.1.3"
once_cell = "1.4.1"
uuid = { version = "0.8.1", features = ["serde", "wasm-bindgen"] }
serde_qs = "0.7.0"

web-sys = { version = "0.3.45", features = [
    'Url',
    'Request',
    'RequestInit',
    'RequestCredentials',
    'Response',
    'RequestMode',
    'Headers',
    'Window',
    'Location',
    'Storage',
    'UrlSearchParams',
] }
shared = {path = "../../../shared/rust"}
config = {path = "../../../config/rust"}
awsm_web = { version = "0.6.3", features = ["loaders", "serde_iso"] }
anyhow = "1.0.33"

[features]
local = []
release = []
sandbox = []
