[package]
name = "app"
version = "0.1.0"
description = "App"
authors = ["David Komer <david.komer@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.4.0"
wasm-logger = { version = "0.2.0", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
ji_cloud_shared = {path = "../../shared/rust", features=["frontend"] }
jsonwebtoken = "7.1.0"
dominator = "0.5.10"
wasm-bindgen = {version = "0.2.62", features=["nightly"]}
futures-signals = "0.3.15"
gloo-events = "0.1.1"
gloo-timers = "0.2.1"
cfg-if = "0.1.10"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
serde_json = "1.0.52"
futures = "0.3.4"
strum = "0.18.0"
strum_macros = "0.18.0"
js-sys = "0.3.39"
wasm-bindgen-futures = "0.4.12"
web-sys = { version = "0.3.39", features = [
    'Url',
    'Request',
    'RequestInit',
    'Response',
    'RequestMode',
    'Headers',
] }

[features]
default = ["wee_alloc"]
release = ["ji_cloud_shared/release"]
sandbox = ["ji_cloud_shared/sandbox"]
ts_test = []
quiet = []
local = ["wasm-logger", "console_error_panic_hook", "ji_cloud_shared/local"]
