[package]
name = "components"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
shared = {path = "../../../../shared/rust"}
config = {path = "../../../../config/rust", features = ["wasm"]}
chrono = { version = "0.4.19", features = ["wasmbind"] }
futures = "0.3.16"
itertools = "0.10.1"
async-trait = "0.1.50"
serde = { version = "1.0.126", features = ["derive"] }
serde_repr = "0.1.7"
strum = "0.21.0"
strum_macros = "0.21.1"
const_format = { version = "0.2.15", features = ["const_generics"] }
log = "0.4.14"
serde_json = "1.0.64"
cfg-if = "1.0.0"
beach_map = "0.2.1"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde-wasm-bindgen = "0.3.0"
once_cell = "1.8.0"
uuid = { version = "0.8.2", features = ["serde", "wasm-bindgen"] }
url = "2.2.2"
serde_qs = "0.8.4"
dominator = "0.5.19"
discard = "1.0.4"
futures-signals = "0.3.22"
dominator_helpers = "0.7.2"
simple-html-template = { version = "0.2.4", features = ["wasm"] }
htmlescape = "0.3.1"
unicode-segmentation = "1.8.0"

web-sys = { version = "0.3.51", features = [
    'Url',
    'Request',
    'RequestInit',
    'RequestCredentials',
    'Response',
    'RequestMode',
    'Headers',
    'Window',
    'Document',
    'Element',
    'Location',
    'Storage',
    'UrlSearchParams',
    'CssStyleDeclaration',
    'DomRect',
    'HtmlDocument',
    'HtmlImageElement',
    'HtmlCanvasElement',
    'History',
    'CustomEvent',
    'HtmlAudioElement',
    'HtmlIFrameElement',
    'CanvasRenderingContext2d',
    'HtmlSelectElement',
    'Performance',
] }
awsm_web = { version = "0.24.1", features = ["loaders", "serde_iso", "dom", "image", "audio", "canvas"] }
anyhow = "1.0.42"
gloo-timers = "0.2.1"
rgb = "0.8.27"
regex = "1.5.4"

[features]
quiet = ["utils/quiet"]
local = ["quiet"]
release = []
sandbox = []

animation = []
audio_input = []
backgrounds = []
color_select = []
image = []
image_search = []
image_upload = []
instructions = []
module = []
module_edit = []
module_play = []
stickers = []
text_editor = []
tooltip = []
transform = []
traces = []
lists = []
audio_mixer = []
theme_selector = []
module_groups_cards = []
collision = []
firebase = []

default = ["all"]
all= [
    "animation", 
    "audio_input", 
    "backgrounds", 
    "color_select", 
    "image", 
    "image_search", 
    "image_upload", 
    "instructions", 
    "module", 
    "module_edit", 
    "module_play", 
    "stickers", 
    "text_editor", 
    "tooltip", 
    "transform",
    "traces",
    "lists",
    "audio_mixer",
    "theme_selector",
    "module_groups_cards",
    "collision",
    "firebase",
]
