[package]
name = "components"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
shared = { path = "../../../../shared/rust", features = ["wasm"] }
chrono = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
cfg-if = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
serde_qs = { workspace = true }
dominator = { workspace = true }
discard = { workspace = true }
futures-signals = { workspace = true }
dominator_helpers = { workspace = true }
htmlescape = { workspace = true }
unicode-segmentation = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
web-sys = { workspace = true }
awsm_web = { workspace = true }
anyhow = { workspace = true }
gloo-timers = { workspace = true }
gloo-utils = { workspace = true }
rgb = { workspace = true }
regex = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
qrcode-generator = { workspace = true }

[features]
quiet = ["utils/quiet"]
local = ["quiet"]
release = []
sandbox = []
iframe_audio = []

animation = []
asset_card = []
asset_search_bar = []
audio_input = []
audio_player_button = []
backgrounds = []
categories_input = []
color_select = []
confirm = []
dialog = []
file_input = []
image = []
image_search = []
image_upload = []
instructions = []
jigzi_help = []
module = []
module_edit = []
module_play = []
stickers = []
text_editor = []
tooltip = []
transform = []
traces = []
lists = []
audio_mixer = []
theme_selector = []
module_groups_cards = []
module_groups_design = []
collision = []
firebase = []
hebrew_buttons = []
page_header = []
page_footer = []
pdf = []
qr_dialog = []
share_jig = []
player_popup = []
box_outline = []
buttons = []
tabs = []
overlay = []
editable_profile_image =[]
help_center = []
unit = []

default = ["all"]
all = [
    "animation",
    "asset_card",
    "asset_search_bar",
    "audio_input",
    "audio_player_button",
    "backgrounds",
    "categories_input",
    "color_select",
    "confirm",
    "dialog",
    "file_input",
    "image",
    "image_search",
    "image_upload",
    "instructions",
    "jigzi_help",
    "module",
    "module_edit",
    "module_play",
    "stickers",
    "text_editor",
    "tooltip",
    "transform",
    "traces",
    "lists",
    "audio_mixer",
    "theme_selector",
    "module_groups_cards",
    "module_groups_design",
    "collision",
    "firebase",
    "hebrew_buttons",
    "page_header",
    "page_footer",
    "pdf",
    "qr_dialog",
    "share_jig",
    "player_popup",
    "box_outline",
    "buttons",
    "tabs",
    "overlay",
    "editable_profile_image",
    "unit"
]
